Fixed overflow

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,18 +14,23 @@
     --disabled-border: darkred;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .header {
     display: flex;
     align-items: center;
-    gap: 100px;
-    padding: 20px;
+    justify-content: space-between;
     background-color: var(--main-background);
     color: var(--main-text);
     position: relative;
+    padding: 20px;
     width: 100%;
+    max-width: 1400px;
     height: 15vh;
     top: 0;
-    z-index: 1;
 }
 
 .button-container {
@@ -103,7 +108,6 @@
 
 h1 {
     font-size: 2rem;
-    margin: 0;
     text-align: center;
 }
 
